# Albelli.Magick.Builder

./: .travis.yml  Albelli.Magick.NET-Q8-x64.AmazonLinux.Natives.nuspec  CMakeLists.txt  Dockerfile  README.md  build-im-q8.sh  build_internal.sh  buildwithdocker.sh  make_magick.cmd  make_magick.sh  stupid_checkout.sh
nuget/: template.nuspec  template.targets
